<resources>
    <string name="app_name">GpsTracker</string>
    <string name="action_settings">Settings</string>
    <string name="add_list">Add To List</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_model">Select Model</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_password">Password</string>
    <string name="track_name">License Plate</string>
    <string name="view_list">View List</string>
    <string name="view_map">View Last Location</string>
    <string name="send_command">Send Command</string>
    <string name="select_commands">Select Command</string>
    <string name="select_tracker">Select Tracker</string>
    <string name="run_command">Run Command</string>
    <string name="remove_selected">Remove Selected</string>
    <string name="new_tracker">Add Tracker</string>
    <string name="edit_tracker">Edit Tracker</string>
    <string name="remove_tracker">Remove Selected</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="tracker_update">Update Tracker</string>
    <string name="view_logs">View Logs</string>
    <string name="tracker_settings">Tracker Settings</string>
    <string name="command_activate">Command Activate</string>
    <string name="command_deactivate">Command Deactivate</string>
    <string name="add_command">Add Command</string>
    <string name="command_name">Command Name</string>
    <string name="command">Command</string>
    <string name="del_command">Delete Command</string>
    <string name="new_brand">Add New Brand</string>
    <string name="new_model">Add New Model</string>
    <string name="add_all_list">Add All To List</string>
    <string name="edit_user">Edit User</string>
    <string name="edit_pass">Edit Password</string>
    <string name="update_account">Update Account</string>
    <string name="notificationtitle">GPS Alert</string>
    <string name="refresh">Refresh</string>
    <string name="str_rb_normal">Normal</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="str_rb_terrain">Terrain</string>
    <string name="startupmessage">Welcome To Gps Tracker For Your Car(s)</string>

    <string-array name="user_arrays">
        <item Value="user"></item>
        <item Value="pass"></item>
    </string-array>
    <string name="title_activity_gps_tracker_user_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_gps_tracker_view_map">Map</string>
    <string name="title_activity_gps_tracker_view_map_log">Map</string>
    <string name="about">emuco7@gmail.com</string>
</resources>
