<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_logs"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="@string/view_logs"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:orderInCategory="100"
        android:title="@string/view_map"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/edit_tracker"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/remove_selected"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="100"
        android:title="@string/tracker_settings"/>

    <item
        android:id="@+id/action_addnew"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/new_tracker"
        android:visible="true"
        app:showAsAction="always" />

</menu>