<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_del_comm"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="3"
        android:title="@string/del_command"
        android:visible="false" />

    <item
        android:id="@+id/action_activate"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="2"
        android:title="@string/command_activate" android:visible="false"/>

    <item
        android:id="@+id/action_deactivate"
        android:icon="@android:drawable/ic_menu_set_as"
        android:orderInCategory="1"
        android:title="@string/command_deactivate" android:visible="false"/>

    <item
        android:id="@+id/action_add_comm"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="0"
        android:title="@string/add_command" android:visible="false"/>

</menu>