<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gps_tracker_user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.seven.gpstracker.GpsTrackerUserLogin">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignEnd="@+id/txtusrpass"
        android:layout_alignRight="@+id/txtusrpass"
        android:layout_below="@+id/txtusrpass"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="29dp"
        android:text="@string/sign_in" />

    <EditText
        android:id="@+id/txtusrpass"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignLeft="@+id/txtusr"
        android:layout_alignStart="@+id/txtusr"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtusr"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_above="@+id/txtusrpass"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="23dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/gpsbackground2" />

</RelativeLayout>
