<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context="com.example.seven.gpstracker.gpsTrackerEdit">

    <EditText
        android:id="@+id/txteditplate"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/track_name"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignLeft="@+id/spEditBrand"
        android:layout_alignStart="@+id/spEditBrand"
        android:layout_marginTop="29dp" />

    <Spinner
        android:id="@+id/spEditBrand"
        android:layout_width="352dp"
        android:layout_height="44dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="75dp"
        android:layout_below="@+id/txteditplate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <Spinner
        android:id="@+id/spEditModel"
        android:layout_width="352dp"
        android:layout_height="44dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="132dp"
        android:layout_below="@+id/spEditBrand"
        android:layout_alignLeft="@+id/spEditBrand"
        android:layout_alignStart="@+id/spEditBrand"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/txtEditPhoneNumber"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="191dp"
        android:layout_below="@+id/spEditModel"
        android:layout_alignLeft="@+id/spEditModel"
        android:layout_alignStart="@+id/spEditModel"
        android:layout_marginTop="21dp" />

    <EditText
        android:id="@+id/txtEditPassword"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:hint="@string/password"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="247dp"
        android:layout_below="@+id/txtEditPhoneNumber"
        android:layout_alignLeft="@+id/txtEditPhoneNumber"
        android:layout_alignStart="@+id/txtEditPhoneNumber"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnTrackerUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracker_update"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="301dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtEditPassword"
        android:layout_alignEnd="@+id/txtEditPassword" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/gpsbackground2"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
